tests/NormalTests/paczka1/fuzzy1/94865272.err
Error in line 9: 4NWqC3aKY S684 78,3
Error in line 14: 8HZk9uCogL S447 41,7
Error in line 4: kaHxfxp35 S684 28,7
Error in line 19: 5oqg0Gg S447 23,4
Error in line 26: *444 *444 20,2
Error in line 24: 4NWqC3aKY A222 232,7
Error in line 35: A444 A444 86,5
